hide aws creds use aws/aws_access_key and secret_key instead of vpc_nat/aws_access_key and secret_key update vagrantfile for changes

--- a/templates/default/nat-monitor.erb
+++ b/templates/default/nat-monitor.erb
@@ -26,7 +26,7 @@ Wait_for_Instance_Start=300
 . /etc/profile.d/ec2.sh
 
 # setup aws creds
-. /root/credentials.txt
+. /root/.aws/.credentials
 
 
 # Get this instance's ID
